--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,36 @@
 a {
     text-decoration: none;
 }
+
+html,
+body,
+body * {
+    box-sizing: border-box;
+}
+
+html,
+body {
+    line-height: 1.25;
+}
+
+img {
+    width: 100%;
+    height: auto;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 12px;
+  }
+
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #303030;
+    border-radius: 3px;
+}
+
+
 .btn {
     width: 220px;
     height: 65px;
@@ -59,12 +89,12 @@ a {
                 0 0 20px #000000,
                 0 0 30px #000000;
   }
-  
+
 .pulse span {
     position: absolute;
     display: block;
   }
-  
+
 .pulse span:nth-child(1) {
     top: 0;
     left: -100%;
@@ -73,7 +103,7 @@ a {
     background: linear-gradient(90deg, transparent, #000000);
     animation: btn-anim1 1s linear infinite;
   }
-  
+
   @keyframes btn-anim1 {
     0% {
       left: -100%;
@@ -82,7 +112,7 @@ a {
       left: 100%;
     }
   }
-  
+
 .pulse span:nth-child(2) {
     top: -100%;
     right: 0;
@@ -92,7 +122,7 @@ a {
     animation: btn-anim2 1s linear infinite;
     animation-delay: .25s
   }
-  
+
   @keyframes btn-anim2 {
     0% {
       top: -100%;
@@ -101,7 +131,7 @@ a {
       top: 100%;
     }
   }
-  
+
 .pulse span:nth-child(3) {
     bottom: 0;
     right: -100%;
@@ -111,7 +141,7 @@ a {
     animation: btn-anim3 1s linear infinite;
     animation-delay: .5s
   }
-  
+
   @keyframes btn-anim3 {
     0% {
       right: -100%;
@@ -120,7 +150,7 @@ a {
       right: 100%;
     }
   }
-  
+
 .pulse span:nth-child(4) {
     bottom: -100%;
     left: 0;
@@ -130,7 +160,7 @@ a {
     animation: btn-anim4 1s linear infinite;
     animation-delay: .75s
   }
-  
+
   @keyframes btn-anim4 {
     0% {
       bottom: -100%;
@@ -184,6 +214,9 @@ a {
     color: #303030;
     transition: .2s;
 }
+.header__link:hover::after {
+    transform: scaleX(1);
+}
 .header__link:after {
     content: "";
     position: absolute;
@@ -194,6 +227,9 @@ a {
     z-index: -1;
     height: 8px;
     background: #54ed39;
+    transform: scaleX(0);
+    transition: transform .3s;
+    transform-origin: 0 center;
 }
 .header__link:last-child {
     margin-right: 0;
@@ -663,7 +699,7 @@ a {
     font-size: 16px;
     color: #fff;
     transition: .2s;
-    
+
 }
 
 .footer .link:hover {
@@ -693,15 +729,19 @@ a {
     background-color: rgba(0, 0, 0, 0.5);
 }
 .modal__dialog {
-    max-width: 500px;
-    margin: 40px auto;
+    /* max-width: 500px;
+    margin: 40px auto; */
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .modal__content {
-    position: absolute;
+    /* position: absolute; */
     width: 500px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    /* top: 50%;
+    left: 50%; */
+    /* transform: translate(-50%, -50%); */
     padding: 40px;
     background-color: #fff;
     border: 1px solid rgba(0, 0, 0, 0.2);
@@ -867,7 +907,7 @@ a {
     .offer__slider {
         width: 100%;
     }
-    
+
     .calculating__choose_medium {
         flex-wrap: wrap;
         width: 100%;
